--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build && node copySitemap.js",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run mt-performance:serve-ssr",
+    "serve:ssr": "node dist/mt-performance/server/main.js",
+    "build:ssr": "ng build && ng run mt-performance:server",
+    "prerender": "ng run mt-performance:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,9 +21,12 @@
     "@angular/forms": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/platform-server": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@nguniversal/express-engine": "^12.1.3",
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
+    "express": "^4.15.2",
     "jquery": "^3.6.0",
     "marked": "^4.0.6",
     "rxjs": "~6.6.0",
@@ -30,6 +37,8 @@
     "@angular-devkit/build-angular": "~12.2.1",
     "@angular/cli": "~12.2.1",
     "@angular/compiler-cli": "~12.2.0",
+    "@nguniversal/builders": "^12.1.3",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/marked": "^4.0.1",
     "@types/node": "^12.11.1",
