update to angular 13 and fix og tag creation

--- a/angular.json
+++ b/angular.json
@@ -151,7 +151,10 @@
           "builder": "@nguniversal/builders:prerender",
           "options": {
             "routes": [
-              "/"
+              "/",
+              "/news/5",
+              "/news/4",
+              "/news/1"
             ]
           },
           "configurations": {
