--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/platform-server": "~13.3.11",
     "@angular/router": "~13.3.11",
+    "@contentful/rich-text-html-renderer": "^15.13.1",
     "@nguniversal/express-engine": "^13.1.1",
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
+    "contentful": "^9.2.4",
     "express": "^4.15.2",
     "jquery": "^3.6.0",
     "marked": "^4.0.6",
