migrate everything to contentful

--- a/angular.json
+++ b/angular.json
@@ -152,9 +152,9 @@
           "options": {
             "routes": [
               "/",
-              "/news/5",
-              "/news/4",
-              "/news/1"
+              "/news/4PQQ7sVQ5guqRsWjkXSVlj",
+              "/news/4bhKzMqdDQodxQ1yNfm5mt",
+              "/news/5MT568PkpMcSs5eduhwAgM"
             ]
           },
           "configurations": {
