--- a/angular.json
+++ b/angular.json
@@ -154,7 +154,8 @@
               "/",
               "/news/4PQQ7sVQ5guqRsWjkXSVlj",
               "/news/4bhKzMqdDQodxQ1yNfm5mt",
-              "/news/5MT568PkpMcSs5eduhwAgM"
+              "/news/5MT568PkpMcSs5eduhwAgM",
+              "/news/7rM3NXCxP8Fey73HBBPf2a"
             ]
           },
           "configurations": {
