--- a/angular.json
+++ b/angular.json
@@ -157,7 +157,10 @@
               "/news/5MT568PkpMcSs5eduhwAgM",
               "/news/7rM3NXCxP8Fey73HBBPf2a",
               "/news/6C6vYNNDmOAVjAA43attGC",
-              "/news/3wuBjJGEKVZwYy2Kdm9woA"
+              "/news/3wuBjJGEKVZwYy2Kdm9woA",
+              "/news/5ctxcNajLcxRnOemKddh8l",
+              "/news/6ON19jQHldSQjgMjmIEfhf",
+              "/news/1Qx80Mn9h7JywjqdO98RTU"
             ]
           },
           "configurations": {
