--- a/angular.json
+++ b/angular.json
@@ -160,7 +160,8 @@
               "/news/3wuBjJGEKVZwYy2Kdm9woA",
               "/news/5ctxcNajLcxRnOemKddh8l",
               "/news/6ON19jQHldSQjgMjmIEfhf",
-              "/news/1Qx80Mn9h7JywjqdO98RTU"
+              "/news/1Qx80Mn9h7JywjqdO98RTU",
+              "/news/1dsQmZTTwE2z3fXQ8ovEdR"
             ]
           },
           "configurations": {
