--- a/angular.json
+++ b/angular.json
@@ -161,7 +161,8 @@
               "/news/5ctxcNajLcxRnOemKddh8l",
               "/news/6ON19jQHldSQjgMjmIEfhf",
               "/news/1Qx80Mn9h7JywjqdO98RTU",
-              "/news/1dsQmZTTwE2z3fXQ8ovEdR"
+              "/news/1dsQmZTTwE2z3fXQ8ovEdR",
+              "/news/2XQMh5NGHems0RoE1nhqEN"
             ]
           },
           "configurations": {
