--- a/angular.json
+++ b/angular.json
@@ -162,7 +162,8 @@
               "/news/6ON19jQHldSQjgMjmIEfhf",
               "/news/1Qx80Mn9h7JywjqdO98RTU",
               "/news/1dsQmZTTwE2z3fXQ8ovEdR",
-              "/news/2XQMh5NGHems0RoE1nhqEN"
+              "/news/2XQMh5NGHems0RoE1nhqEN",
+              "/news/4nDgpEx3X2gw9taztLgicA"
             ]
           },
           "configurations": {
