--- a/angular.json
+++ b/angular.json
@@ -163,7 +163,8 @@
               "/news/1Qx80Mn9h7JywjqdO98RTU",
               "/news/1dsQmZTTwE2z3fXQ8ovEdR",
               "/news/2XQMh5NGHems0RoE1nhqEN",
-              "/news/4nDgpEx3X2gw9taztLgicA"
+              "/news/4nDgpEx3X2gw9taztLgicA",
+              "/news/1xTwlFy04h3bOySpIJWUDw"
             ]
           },
           "configurations": {
