--- a/angular.json
+++ b/angular.json
@@ -164,7 +164,8 @@
               "/news/1dsQmZTTwE2z3fXQ8ovEdR",
               "/news/2XQMh5NGHems0RoE1nhqEN",
               "/news/4nDgpEx3X2gw9taztLgicA",
-              "/news/1xTwlFy04h3bOySpIJWUDw"
+              "/news/1xTwlFy04h3bOySpIJWUDw",
+              "/news/4V4FEsXxC8Y9INXRSqMvad"
             ]
           },
           "configurations": {
