--- a/angular.json
+++ b/angular.json
@@ -165,7 +165,8 @@
               "/news/2XQMh5NGHems0RoE1nhqEN",
               "/news/4nDgpEx3X2gw9taztLgicA",
               "/news/1xTwlFy04h3bOySpIJWUDw",
-              "/news/4V4FEsXxC8Y9INXRSqMvad"
+              "/news/4V4FEsXxC8Y9INXRSqMvad",
+              "/news/5x4MfZUzLPdvCJ9UozsPkK"
             ]
           },
           "configurations": {
