--- a/angular.json
+++ b/angular.json
@@ -166,7 +166,9 @@
               "/news/4nDgpEx3X2gw9taztLgicA",
               "/news/1xTwlFy04h3bOySpIJWUDw",
               "/news/4V4FEsXxC8Y9INXRSqMvad",
-              "/news/5x4MfZUzLPdvCJ9UozsPkK"
+              "/news/5x4MfZUzLPdvCJ9UozsPkK",
+              "/news/mSK1n93CrlrpFpuxyZe2c",
+              "/news/39Cab2MguKGd3HKUoEcjSF"
             ]
           },
           "configurations": {
