--- a/angular.json
+++ b/angular.json
@@ -168,7 +168,8 @@
               "/news/4V4FEsXxC8Y9INXRSqMvad",
               "/news/5x4MfZUzLPdvCJ9UozsPkK",
               "/news/mSK1n93CrlrpFpuxyZe2c",
-              "/news/39Cab2MguKGd3HKUoEcjSF"
+              "/news/39Cab2MguKGd3HKUoEcjSF",
+              "/news/1HV61Q3y29RKsrcz4C0ztF"
             ]
           },
           "configurations": {
